# llama.cpp

./: .gitignore  README.md  prompt1.txt  setup.sh
.devops/: determinism.Dockerfile
common/: log.cpp  log.h
examples/: CMakeLists.txt
examples/determinism-test/: CMakeLists.txt  determinism-test.cpp
examples/server/: server.cpp
examples/simple-chat/: simple-chat.cpp
prompts/: prompt1.txt  sample.txt
